Added endorsed dir support.