@@ -53,6 +53,9 @@
         <get src="http://kohsuke.sfbay.sun.com/hudson/job/${jaxws-hudson-project}/lastSuccessfulBuild/artifact/jax-ws-sources/jaxws-ri/build/jaxws-ri.zip"
              dest="build/jaxws-ri.zip"/>
         <unzip src="build/jaxws-ri.zip" dest="build"/>
+        <!-- for JDK6 endorsed dir -->
+        <mkdir dir="build/jaxws-ri/lib1"/>
+        <copydir src="build/jaxws-ri/lib" dest="build/jaxws-ri/lib1" includes="*-api.jar"/>
 
         <get src="http://kohsuke.sfbay.sun.com/hudson/job/${jaxws-hudson-project}/lastSuccessfulBuild/artifact/jax-ws-sources/jaxws-ri/transports/local/build/jaxws-local-transport.jar"
              dest="build/jaxws-local-transport.jar"/>
@@ -161,6 +164,7 @@
                 <arg line="${args}"/>
                 <jvmarg  value="-DproxyHost=webcache.sfbay.sun.com"/>
                 <jvmarg  value="-DproxyPort=8080"/>
+                <jvmarg  value="-Djava.endorsed.dirs=${endorsed.dir}"/>
 
                 <!--jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,address=8000" />
                <jvmarg value="-Xdebug"/-->
